# libemu

./: README.md  meson.build
lib/: init.c  ipc.c  libemu.c  list.c  meson.build
lib/include/: emu_ipc.h  libemu.h  libemu_cpu.h  libemu_ipc.h  libemu_ppu.h
